sinxronize
